Adicionado nova integração de API de noticias
